<resources>
    <string name="app_name">BL-OTA</string>
    <string name="selectedBinary">Import bin from filesystem</string>
    <string name="selectedBinaryName">Selected: %1$s</string>
    <string name="deviceName">U/A</string>
    <string name="deviceAddress">U/A</string>
    <string name="LastSeen">U/A</string>
    <string name="RSSI">U/A</string>
    <string name="pin_hint">Pin</string>
    <string name="user_hint">User</string>
    <string name="log_in">Log in!</string>
    <string name="logo">Logo</string>
    <string name="no_file_selected">No file selected</string>
    <string name="ready_for_update">Ready for update</string>
    <string name="start_ota">Start OTA</string>
    <string name="local_file">Local file</string>
    <string name="select_local_file">Select Local File</string>
    <string name="select_cloud_files">Select Cloud Files</string>
    <string name="cloud_file">Cloud file</string>
    <string name="firmware_meta">Version: %1$s • Uploaded: %2$s</string>
    <string name="rssi_value">RSSI: %1$d</string>
    <string name="device_address_missing">Device address is missing</string>
    <string name="connected_to_device">Connected to %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="advertising_services_and_characteristics">Advertising %1$d services and %2$d characteristics</string>
    <string name="read_failed">Read failed</string>
    <string name="sent_value">Sent: %1$s</string>
    <string name="not_confirmed_value">Not confirmed: %1$s</string>
    <string name="reading_status">Reading…</string>
    <string name="write_invalid_input">Failed to send: invalid input</string>
    <string name="write_empty_input">Failed to send: empty input</string>
    <string name="write_sent_status">Sent: %1$s</string>
</resources>