<!-- feature_stm_ota.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_toEndOf="@+id/expandable_service_list">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready_for_update"
        android:textColor="#8D6E63" />

    <Button
        android:id="@+id/startUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_ota"/>

    <ProgressBar
        android:id="@+id/updateProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false" />

    <TextView
        android:id="@+id/selectedFileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_file_selected"
        android:textColor="#8D6E63" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/local_file"
                android:textColor="#8D6E63" />

            <Button
                android:id="@+id/selectFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_local_file" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/cloud_file"
                android:textColor="#8D6E63" />

            <Button
                android:id="@+id/selectCloudFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_cloud_files" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
