<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ImageIcon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ble_ota1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/PinEditText"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="username"
        android:hint="@string/user_hint"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/PinEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PinEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="pin"
        android:hint="@string/pin_hint"
        android:inputType="numberPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameEditText" />
    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/PinEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:clickable="false"
        />

    <Button
        android:id="@+id/LoginFastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAST"
        app:layout_constraintTop_toBottomOf="@id/LoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
